Resolved bug with wrong position of button and text. Task: AC-66, AC-67. Update styles.

--- a/src/Acted/LegalDocsBundle/Resources/public/css/custom.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/custom.css
@@ -442,6 +442,22 @@ a.disabled {
 {
     right: 0 !important;
 }
+
+
+
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    font-size: 14px !important;
+}
+
+.fa.fa-trash:before {
+    content: url("/assets/images/delete.png");
+}
+
+/**
+ *  Prices page and Profile page fixes
+ */
+
 /*@media (min-width: 992px) and (max-width: 1200px){
     .price-list .video iframe {
         height: 255px;
