--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
@@ -21,7 +21,7 @@ main.prices{
 }
 .prices .act{
     position: relative;
-    font-size: 14px;
+    font-size: 13px;
     color: #000;
     color: rgba(0, 0, 0, .87);
     margin-bottom: 32px;
@@ -75,7 +75,8 @@ main.prices{
 .prices .act .info-list .col:first-child:after{
     border: none;
 }
-.prices .act .info-list .col:after,
+
+.prices .act .info-list div[set_option]:after,
 .prices .act .info-list .col-2:after{
     position: absolute;
     border-left: 2px solid rgba(0, 0, 0, .04);
@@ -94,6 +95,7 @@ main.prices{
     -webkit-border-radius: 21px;
     position: relative;
     z-index: 10;
+    margin: 0 20px 0 0;
 }
 .prices .button-gradient.add-btn{
     background: rgb(88,149,243);
@@ -113,7 +115,7 @@ main.prices{
     -webkit-border-radius: 21px;
     padding: 0 19px;
     height: 25px;
-    font-size: 12px;
+    font-size: 13px;
     color: #000;
     color: rgba(0, 0, 0, .87);
     outline: none;
@@ -247,6 +249,7 @@ main.prices{
     vertical-align: top;
     color: #ff793e;
     text-decoration: underline;
+    font-size: 13px;
 }
 .prices .act .add a:hover{text-decoration: none;}
 .prices .act .number{margin-right: 3px;}
@@ -255,7 +258,7 @@ main.prices{
     border: 1px solid #e5e5e5;
     border-radius: 8px;
     -webkit-border-radius: 8px;
-    font-size: 15px;
+    font-size: 13px;
     padding: 0 5px;
     color: #000;
     height: 32px;
@@ -345,13 +348,31 @@ main.prices .note{
     border: none;
 }
 .prices .act .select2{margin-left: 0;}
-.prices .act select.short + .select2{width: 47px !important;}
+.prices .act select.short + .select2{
+    width: 47px !important;
+}
+.prices .act select.short {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: linear-gradient(45deg, transparent 50%, #ff793e 50%),
+                        linear-gradient(135deg, #ff793e 50%, transparent 50%),
+                        linear-gradient(to right, #ff793e, #ff793e);
+    background-position:
+            calc(100% - 10px) 14px,
+            calc(100% - 5px) 14px,
+            100% 0;
+    background-size: 5px 5px, 5px 5px, 0 0;
+    background-repeat: no-repeat;
+}
 /*.act.empty .button-gradient.add-btn{margin-top: -82px;}*/
 .prices .act-section{
     margin: 0 0 40px;
 }
 .prices .act-section .heading{
-    font-size: 14px;
+    font-size: 13px;
     height: auto;
     margin-bottom: 40px;
     padding-bottom: 6px;
@@ -380,7 +401,7 @@ main.prices .note{
     border: 1px solid #e5e5e5;
     border-radius: 8px;
     -webkit-border-radius: 8px;
-    font-size: 15px;
+    font-size: 13px;
     padding: 5px;
     color: #000;
     background: #FFF;
@@ -402,7 +423,7 @@ main.prices .note{
 .prices .price-list label {
     margin-bottom: 0;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 13px;
     color: #000;
 }
 .prices .custom-checkbox label:before,
@@ -414,7 +435,7 @@ main.prices .note{
 @media (max-width: 1199px) {
     .prices .act,
     .prices .act .quantity{
-        font-size: 14px;
+        font-size: 13px;
     }
     .prices .act .row{margin-bottom: 15px;}
     .prices .act .price-list dl{margin-bottom: 16px;}
