--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -93,7 +93,7 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="orange_profile"><a href="/profile/{{ app.user.artist.slug }}">View my profile</a></li>
-                                                <li class="orange_edit"><a href="/profile/edit_profile/{{ app.user.artist.slug }}">edit my profile</a></li>
+                                                <li class="orange_edit"><a href="/profile/edit_profile/{{ app.user.artist.slug }}">Edit my profile</a></li>
                                             </ul>
                                         </li>
                                     {% endif %}
