Resolve problem with non creating Price 2 on prices page. AC-76. Resolve error on search page. AC-79. 20/10/2016 3:53 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -160,17 +160,18 @@
                                 <label class="info-label">Your URL:</label>
                             </div>
                             <div class="box">
-                                <h2 class="show">http://www.acted.co/{{ artist.name }}</h2>
+                                <h2 class="show">{{ domain }}/{{ artist.name }}</h2>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="box text-right">
-                                <label class="info-label">Your tiny URL:</label>
-                            </div>
-                            <div class="box">
-                                <h2 class="show">http://www.acted.co/{{ artist.name }}</h2>
-                            </div>
-                        </div>
+                        {# TODO: Add tinyurl service #}
+                        {#<div class="row">#}
+                            {#<div class="box text-right">#}
+                                {#<label class="info-label">Your tiny URL:</label>#}
+                            {#</div>#}
+                            {#<div class="box">#}
+                                {#<h2 class="show">{{ domain }}/{{ artist.name }}</h2>#}
+                            {#</div>#}
+                        {#</div>#}
                         <div class="row">
                             <div class="box text-right">
                                 <label class="info-label">Are you ready to work abroad?</label>
