Resolve problem with search_image on "/search" page. Task: AC-79. 6:49 PM Update styles for registration inputs. Remove cutting text from vertical sides. Task: AC-75. Added text dots to profile link on settings page. Task: AC-79.

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/registration.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/registration.css
@@ -335,6 +335,8 @@
     box-shadow: none;
     max-width: 293px;
     display: inline-block;
+    line-height: 12px;
+    padding: 3px 6px;
 }
 
 #customerBlock .contact-details .form-group input {
