--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/settings-page.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/settings-page.css
@@ -68,6 +68,9 @@
     font-weight: 600;
     display: none;
     float: left;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden !important;
 }
 .settings .box.active h2{display: block;}
 .settings .info-label{
