--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -160,7 +160,7 @@
                                 <label class="info-label">Your URL:</label>
                             </div>
                             <div class="box">
-                                <h2 class="show">{{ domain }}/{{ artist.name }}</h2>
+                                <h2 class="show"><a href="{{ domain }}/profile/{{ artist.slug }}">{{ domain }}/profile/{{ artist.slug }}</a></h2>
                             </div>
                         </div>
                         {# TODO: Add tinyurl service #}
