--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -122,7 +122,7 @@
                             <a href="#" id="comment_toggle">Add a comment</a>
                         </div>
 
-                        <div class="col-lg-12 no-pad" id="comment_area" style="display: none">
+                        <div class="col-lg-12 no-pad" id="comment_area" style="display: none;">
                             <textarea name="comment" class="quote-profile-desc" placeholder="Write a message to the Artist if you have any question about his performance or if you want to provide with more details about your event"></textarea>
                         </div>
 
