fix showing prices in profile

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -4,10 +4,10 @@
                 <article class="item clearfix">
                     <header class="heading">
                         <h2>{{ performance.title }} </h2>
-                        {% if performance.offerMinPrice %}
-                            <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span>
+                        {% if performance.priceOnRequest %}
+                            <div class="price pull-right">Price on request</div>
                         {% else %}
-                            <span class="price">Price: on request</span>
+                            <div class="price pull-right">Price: from {{ performance.minPrice|number_format(2, '.', ',') }} EUR</div> <!--<input class="set-price" type="text" placeholder="0,00">-->
                         {% endif %}
                     </header>
 
