--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -21,13 +21,18 @@
                 <div class="modal-body">
 
                     <div class="row clearfix">
-
-                        <div class="col-lg-12 form-group">
+                        <div class="col-lg-8 form-group">
                             <label for="event_name">Name your event</label>
                             <input type="text" class="form-control" id="event_name" placeholder="Name your event" name="name">
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3 form-group">
+                            <label for="event_date">Date</label>
+                            <input type="text" class="date-picker form-control" id="event_date" name="event_date">
+                        </div>
 
-                        <div class="col-lg-12 form-group">
+                        <div class="col-lg-offset-1 col-lg-4 form-group">
                             <label for="event_country">Country</label>
                             <select data-class="selections-white" name="country" id="event_country">
                                 {% for country in countries() %}
@@ -39,35 +44,36 @@
                                 {% endfor %}
                             </select>
                         </div>
+                    </div>
 
-                        <div class="col-lg-6 form-group">
-                            <label for="event_date">Date</label>
-                            <input type="text" class="date-picker form-control" id="event_date" name="event_date">
-                        </div>
-
-                        <div class="col-lg-6 form-group">
-                            <label for="event_city">City</label>
-                            <select name="city" id="event_city">
-                            </select>
-                        </div>
-
-                        <div class="col-lg-6 form-group">
+                    <div class="row">
+                        <div class="col-lg-3 form-group">
                             <label for="event_time">Time</label>
                             <input type="text" class="form-control" id="event_time" placeholder="Evening" name="event_time">
                         </div>
 
-                        <div class="col-lg-6 form-group">
-                            <label for="event_location">Location</label>
-                            <input type="text" class="form-control" id="event_location" placeholder="Event location" name="location">
+                        <div class="col-lg-offset-1 col-lg-4 form-group">
+                            <label for="event_city">City</label>
+                            <select name="city" id="event_city">
+                            </select>
                         </div>
+                    </div>
 
-                        <div class="col-lg-6 form-group">
+                    <div class="row">
+                        <div class="col-lg-3 form-group">
                             <label class="col-xs-12 no-pad" for="event_type">Event type</label>
                             <select data-class="selections-white" name="type" id="event_type">
                             </select>
                         </div>
 
-                        <div class="col-lg-6 form-group">
+                        <div class="col-lg-offset-1 col-lg-4 form-group">
+                            <label for="event_location">Location</label>
+                            <input type="text" class="form-control" id="event_location" placeholder="Event location" name="location">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-8 form-group">
                             <label class="col-xs-12 no-pad" for="venue_type">Venue type</label>
                             <select data-class="selections-white" name="venue_type" id="venue_type">
                             </select>
