--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
@@ -5,7 +5,7 @@
     <li class="menu-block"><a href="/dashboard/agenda">Agenda</a></li>
     <li class="menu-block"><a href="/dashboard/prices">Prices</a></li>
     <li class="menu-block"><a href="/dashboard/payment">Payment & Accounts</a></li>
-    <li class="menu-block"><a href="/dashboard/reports">Reports</a></li>
+    <li class="menu-block"><a href="/dashboard/techreq">Technical Requirements</a></li>
     <li class="menu-block"><a href="/dashboard/feedbacks">Feedbacks</a></li>
 </ul>
 
@@ -20,7 +20,7 @@
         <li class="menu-block"><a href="/dashboard/agenda">Agenda</a></li>
         <li class="menu-block"><a href="/dashboard/prices">Prices</a></li>
         <li class="menu-block"><a href="/dashboard/payment">Payment & Accounts</a></li>
-        <li class="menu-block"><a href="/dashboard/reports">Reports</a></li>
+        <li class="menu-block"><a href="/dashboard/techreq">Technical Requirements</a></li>
         <li class="menu-block"><a href="/dashboard/feedbacks">Feedbacks</a></li>
     </ul>
 </div>
