--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -62,11 +62,12 @@
         <div id="loadSpinner"></div>
 </footer>
 {% include 'ActedLegalDocsBundle:Default:quoteModal.html.twig' %}
-        {% if app.user %}
+{% include 'ActedLegalDocsBundle:Default:quotationModal.html.twig' %}
+{% if app.user %}
 
-        {% else %}
-            {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
-        {% endif %}
+{% else %}
+    {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
+{% endif %}
 <script src="{{ asset('js/javascript.js') }}"></script>
 <script src="http://maps.google.com/maps/api/js?language=en&libraries=places&key=AIzaSyDLK8SupBcU-H0H0SF0PIar5UP-y-DCrTI"></script>
 <script>
