Update parameters.yml for support .docx and .xlsx files. Update some styles for quotation modal. 1/11/2016 12:08 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -93,3 +93,21 @@
     color: #3d4248;
     margin-bottom: 9px;
 }
+
+
+@media screen and (max-width: 960px) {
+    .quotation-modal .act-info,
+    .quotation-modal .place-info {
+        width: 100%;
+        height: auto;
+    }
+    .quotation-modal .modal-dialog {
+        width: 560px;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .quotation-modal .modal-dialog {
+        width: auto;
+    }
+}
