Update functional for Google autocomplete. 02/11/2016 1:07 PM

--- a/app/Resources/views/_layout.html.twig
+++ b/app/Resources/views/_layout.html.twig
@@ -191,11 +191,7 @@
         </div>
     </div>
 
-
-    <script src="{{ asset('bundles/actedlegaldocs/js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bundles/actedlegaldocs/js/select2.min.js') }}"></script>
-    <script src="{{ asset('bundles/actedlegaldocs/js/jquery.validate.min.js') }}"></script>
-    <script src="{{ asset('bundles/actedlegaldocs/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/javascript.js') }}"></script>
     <script src="{{ asset('bundles/actedlegaldocs/js/userCreationAdmin.js') }}"></script>
     <script src="{{ asset('bundles/actedlegaldocs/js/admin.js') }}"></script>
 </body>
