--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -111,23 +111,12 @@
                             </div>
                             <div class="form-group">
                                 <label for="country">Country</label>
-                                <select name="country" id="country">
-                                    {% for country in countries() %}
-                                        {% if country.name == 'United Kingdom' %}
-                                            <option value="{{ country.id }}" name="country" selected="selected">{{ country.name }}</option>
-                                        {% else %}
-                                            <option value="{{ country.id }}" name="country">{{ country.name }}</option>
-                                        {% endif %}
-                                    {% endfor %}
-                                </select>
+                                <input id="country" type="text" name="country" class="form-control" placeholder="Country" required>
                             </div>
-
                             <div class="form-group">
                                 <label for="cityReg">City</label>
-                                <select name="city" id="cityReg" class="form-control" placeholder="City" required>
-                                </select>
+                                <input disabled name="city" id="cityReg" class="form-control" placeholder="City" required>
                             </div>
-
                             <div class="form-group">
                                 <label for="email">Email</label>
                                 <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
